Set JAVA_OPTS for dist.